--- a/AppleHardwareStore/appsettings.json
+++ b/AppleHardwareStore/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-3PME4FQ\\SQLEXPRESS;Initial Catalog=AppleHardwareStoreDb;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
