--- a/AppleHardwareStore/appsettings.json
+++ b/AppleHardwareStore/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=EDUARDIK-PC\\SQLEXPRESS;Initial Catalog=AppleHardwareStoreDb;Integrated Security=True",
-    "DefaultConnection2": "Server=127.0.0.1,1433; Database=AppleHardwareStoreDb;"
+    "DefaultConnection": "Data Source=DESKTOP-3PME4FQ\\SQLEXPRESS;Initial Catalog=AppleHardwareStoreDb;Integrated Security=True"
+    
   },
   "AllowedHosts": "*"
 }
