--- a/AppleHardwareStore/appsettings.json
+++ b/AppleHardwareStore/appsettings.json
@@ -8,7 +8,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-3PME4FQ\\SQLEXPRESS;Initial Catalog=AppleHardwareStoreDb;Integrated Security=True"
-    
+
+  },
+  "AdminSetting": {
+    "AdminEmail": "admin@mail.ru",
+    "AdminPassword": "admin"
   },
   "AllowedHosts": "*"
 }
